--- a/configs/.env.example
+++ b/configs/.env.example
@@ -2,3 +2,4 @@ REACT_APP_API_URL='https://api.openweathermap.org/data/2.5'
 REACT_APP_API_KEY=Paste your API key here.
 REACT_APP_ICON_URL='https://openweathermap.org/img/w'
 NODE_PATH=src
+GENERATE_SOURCEMAP=true
